finish till regularization

--- a/intro_logistic_regression.tex
+++ b/intro_logistic_regression.tex
@@ -466,22 +466,25 @@ ItalicFont={* Light Italic}
 
       \begin{frame}
         \frametitle{Logistic Regression Demo: Cheater’s Coin}
+        Logistic regression using Python's scikit-learn library:
+        \vfill
         \begin{columns}[T]
           \begin{column}{0.45\textwidth}
-            Logistic regression using Python's scikit-learn library:
-            
             \inputminted[fontsize=\scriptsize]{python}{sample_lr_coin.py}
+            \vfill
+            Do you spot any issues?
           \end{column}
 
           \begin{column}{0.55\textwidth}
+            \vspace{-0.10\textheight}
             \begin{figure}[t]%
-              \hspace*{-0.1\textwidth}%
-              \includegraphics[width=1.20\textwidth]{scripts/coin_fit_lr.pdf}
+              \hspace*{-0.05\textwidth}%
+              % \vspace*{-0.25\textheight}%
+              \includegraphics[width=1.10\textwidth]{scripts/coin_fit_lr.pdf}
             \end{figure}
           \end{column}
         \end{columns}
 
-        Do you spot any issues?
       \end{frame}
 
      
