--- a/intro_logistic_regression.tex
+++ b/intro_logistic_regression.tex
@@ -311,7 +311,7 @@ ItalicFont={* Light Italic}
   \end{frame}
 
   \begin{frame}
-    \frametitle{Linear Regression: Formal Definition (1D)}
+    \frametitle{Logistic Regression: Formal Definition (1D)}
     Problem: for a given dataset
     $\mathbb{D} = \{(x_{1}, y_{1}), \cdots, (x_{n}, y_{n})\}$,
     estimate the probability that the input $x$ belongs to one of the
@@ -330,7 +330,7 @@ ItalicFont={* Light Italic}
     \end{equation*}
 
     $p^{-1}$ is called the \textbf{Logit} function, measuring the
-    log-odds (i.e. probability ratio between a head and tail). %
+    log-odd ratio (i.e. probability ratio between a head and tail). %
     \vfill%
     \textbf{Question: can we directly use the Logit function form to
       perform a logistic regression?}
