--- a/intro_logistic_regression.tex
+++ b/intro_logistic_regression.tex
@@ -597,12 +597,12 @@ ItalicFont={* Light Italic}
         %
 
         It is straightforward to extend the logistic regression if
-        input variable $\mathbf{x} \in \mathbb{R}^{d}$.  \vfill
+        input variable $\mathbf{x}_{i} \in \mathbb{R}^{d\times{}1}$.  \vfill
         \textbf{Model}:
         \begin{align*}
-          p(\mathbf{x}; \beta) &= \dfrac{1}{1 + e^{-(\beta_{0} + \sum_{j=1}^{d} \beta_{d} x_{d})}} = \dfrac{1}{1 + \exp(- \beta^{T} \mathbf{X})}
+          p(\mathbf{x}_{i}; \beta) &= \dfrac{1}{1 + e^{-(\beta_{0} + \sum_{j=1}^{d} \beta_{j} x_{ij})}} = \dfrac{1}{1 + \exp(- \mathbf{X}_{i}^{\mathrm{T}} \beta)}
         \end{align*}
-        here $\mathbf{X} = {1, x_{0}, x_{1}, \cdots, x_{d}}$.
+        here $\mathbf{X} = \left[1, x_{i0}, x_{i1}, \cdots, x_{id}\right] \in \mathbb{R}^{(d+1)\times{}1}$.
 
         \vfill \textbf{Likelihood function}:
         \begin{align*}
@@ -612,10 +612,9 @@ ItalicFont={* Light Italic}
         \vfill \textbf{Gradient}:
         \begin{align*}
           \frac{\partial \mathscr{l}}{\partial \beta_{j}}
-          &= -\sum_{i=1}^{n} -\frac{1}{1 + \exp(-\beta^{T} \mathbf{X}_{i})} x_{ij} + y_{i}x_{ij} \\
+          &= -\sum_{i=1}^{n} -\frac{1}{1 + \exp(-\mathbf{X}_{i}^{\mathrm{T}} \beta)} x_{ij} + y_{i}x_{ij} \\
           &= \sum_{i=1}^{n} (p_{i} - y_{i})x_{ij}
         \end{align*}
-        where $x_{ij}$ is the $j$-th component in $i$-th datum.
         
       \end{frame}
 
@@ -702,7 +701,7 @@ ItalicFont={* Light Italic}
         1$). Solid circle: train data, circle with edge: test data.
 
         \begin{figure}
-          \vspace*{-0.15\textheight}%
+          \vspace*{-0.20\textheight}%
           \includegraphics[width=0.7\textwidth]{scripts/battery_3d.png}
         \end{figure}
         
